# sk-shopping-api

./: .env.example  Cargo.toml  README.md
sk-shopping-test-server/: package-lock.json  package.json
sk-shopping-test-server/components/: FetchComponent.tsx  GoogleOneTap.tsx  Layout.tsx
sk-shopping-test-server/pages/: index.tsx
sk-shopping-test-server/utils/: backend.ts  next-auth.d.ts  types.ts
sk-shopping-test-server/utils/helpers/: useOneTapSignin.ts
src/: main.rs
src/lib/common/: config.rs
src/models/: common.rs  mod.rs
src/models/address/: mod.rs
src/models/auth/: mod.rs  oauth.rs  user.rs  user_wishlists.rs
src/models/category/: db.rs  mod.rs
src/models/collection/: db.rs  mod.rs  request.rs
src/models/item/: db.rs  mod.rs  request.rs
src/models/listing/: db.rs  mod.rs  request.rs
src/models/order/: db.rs  gbprimpay.rs  mod.rs  omise.rs  request.rs
src/models/shop/: db.rs  mod.rs  request.rs
src/routes/: doc.rs  health.rs  mod.rs
src/routes/auth/: create_user_addresses.rs  delete_user_addresses.rs  get_user_cart_items.rs  google.rs  mod.rs  user.rs  user_wishlists.rs
src/routes/category/: all_categories.rs  mod.rs
src/routes/collections/: collection_detail.rs  create_collections.rs  delete_collection_by_id.rs  delete_collections.rs  mod.rs  query_collections.rs  update_collection_by_id.rs
src/routes/items/: add_to_cart.rs  create_items.rs  delete_items.rs  item_detail.rs  mod.rs  query_items.rs  update_item_by_id.rs
src/routes/listings/: add_to_wishlist.rs  delete_listings.rs  listing_detail.rs  (+3 more)
src/utils/: email.rs  mod.rs
(+16 files in other folders)
