[package]
name = "sk-shopping-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


sqlx = { version = "0.7.1", default-features = false, features = [
    "postgres",
    "uuid",
    "chrono",
    "json",
    "runtime-async-std-native-tls",
    "macros",
] } # openssl={ version = "0.10", features = ["v110"] }dotenv = "0.15.0"
actix-web = { version = "4.3.1" }
actix-rt = "2.4.0"
actix-cors = "0.6.4"
env_logger = "0.10.0"
dotenv = "0.15.0"
serde_qs = "0.12.0"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
serde = "1.0.164"
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.4", features = ["json"] }
jsonwebtoken = "8.3.0"
futures = "0.3.17"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
mysk-lib = { git = "https://github.com/suankularb-wittayalai-school/mysk-api.git", branch = "main" }
rayon = "1.5.1"
parallel-stream = "2.1.3"
async-recursion = "1.0.4"
rust_decimal = { version = "1.31.0", features = [
    "serde",
    "db-postgres",
    "borsh",
] }
rust_decimal_macros = "1.31.0"
unzip-n = "0.1.2"
serde_urlencoded = "0.7.0"
base64 = "0.21.2"
lettre = "0.10.4"
lettre_email = "0.9.2"
native-tls = "0.2"
regex = "1.5.4"
